# task-management-bot

./: .env.example  .gitignore  Dockerfile  README.md  agent.py  auth.py  backlog_tools.py  bot.py  calendar_tools.py  callbacks.py  categories.example.json  categories.py  db_utils.py  digest.py  formatting.py  handlers.py  jobs.py  llm.py  pyproject.toml  shell.nix  summary.py  tasks_tools.py  tools_registry.py  tracking_state.py  tracking_tools.py  tz.py  user_profile.example.json  user_profile.py
scripts/: get_refresh_token.py
