[project]
name = "task-agent"
version = "0.1.0"
description = "Telegram bot with message handlers and proactive jobs"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "openai>=2.41.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[job-queue]>=22.7",
    "tinydb>=4.8.2",
]
